--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ts-web-app",
   "version": "1.0.0",
-  "description": "Your TypeScript Web App Description",
+  "description": "Тестовое задание на роль NodeJS-разработчика",
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node src/app.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "тnataly_kt",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
